--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -38,3 +38,32 @@ jobs:
           context: ./Chapter15
           push: true
           tags: ${{ env.ACRNAME }}.azurecr.io/website/website:${{ github.run_number }}
+  
+  CD:
+    runs-on: ubuntu-latest
+    needs: CI
+    steps:
+      - name: Git Checkout
+        uses: actions/checkout@v2
+      - name: Kubernetes set context
+        uses: Azure/k8s-set-context@v1.1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          resource-group: rgr-rgr
+          cluster-name: aks-test
+      - name: Helm upgrade
+        run: |
+          helm upgrade website Chapter15/website --install \
+            --set image.repository=$ACRNAME.azurecr.io/website/website \
+            --set image.tag=${{ github.run_number }}
+      - name: Get service IP
+        run: |
+          PUBLICIP=""
+          while [ -z $PUBLICIP ]; do
+            echo "Waiting for public IP..."
+            PUBLICIP=$(kubectl get service website -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+            [ -z "$PUBLICIP" ] && sleep 10
+          done
+          echo $PUBLICIP
+
+          
